--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "overrides": {
       "axe-core": "4.10.3",
       "dompurify": "3.2.6",
-      "@vercel/analytics": "1.5.0"
+      "@vercel/analytics": "1.5.0",
+      "next": "^15.5.9"
     }
   },
   "version": "0.0.7"
