--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
-    "rimraf": "^6.0.1",
     "@eslint/js": "^9.28.0",
     "@jest/globals": "^30.2.0",
     "@types/jest": "^29.5.14",
@@ -38,7 +37,9 @@
     "globals": "^16.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.5.3"
+    "mongodb": "^7.0.0",
+    "prettier": "^3.5.3",
+    "rimraf": "^6.0.1"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,jsonc}": [
