feat: Expand Intent Layer to support Background Jobs (Cron Primitives)

--- a/examples/intent-backend/intent.yaml
+++ b/examples/intent-backend/intent.yaml
@@ -18,3 +18,8 @@ operations:
   get_all: true
   get_by:
     - email
+
+jobs:
+  - name: PeriodicCleanup
+    schedule: "0 * * * *" # Every hour
+    description: "Cleans up old user records or processes daily stats"
