--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,7 @@
     "dev:workbench": "__MOTIA_DEV_MODE__=1 motia dev",
     "clean": "rm -rf .mermaid node_modules python_modules",
     "get-config": "motia get-config --output ./",
-    "test:tsc-check": "tsc -p ./tests/tsconfig.test.json --noEmit",
+    "test:tsc-check": "tsc -p ./tsconfig.json --noEmit",
     "test": "PATH=python_modules/bin:$PATH jest",
     "test:silent": "PATH=python_modules/bin:$PATH jest --silent",
     "lint": "biome check .",
