--- a/.github/workflows/hackathon-ci.yml
+++ b/.github/workflows/hackathon-ci.yml
@@ -15,13 +15,23 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
       - name: Install pnpm
-        run: corepack enable && corepack prepare pnpm@10.11.0 --activate
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          standalone: true
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile # Avoid lockfile mismatches in CI environment
+        run: |
+          export NODE_OPTIONS="--max-old-space-size=4096"
+          pnpm install --no-frozen-lockfile
 
       - name: Run Typecheck
         run: pnpm --filter playground run test:tsc-check
